# ARW-Denoise

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-gpu-lock.txt
docs/releases/: 0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.5.1.md
docs/validation/: 2026-07-a7c2-pmrid-gpu.md  2026-07-sony-arw-capability.md  2026-07-v050-preflight.md
models/pmrid/: manifest.json
scripts/: __init__.py  audit_bundle.py  benchmark_a7c2.py  build_windows.ps1  fetch_7zip.ps1  fetch_dnglab.ps1  fetch_licenses.ps1  fetch_pmrid_model.ps1  launcher.py  package_release.ps1  release_manifest.py  stress_queue.py  verify_offline_bundle.ps1  verify_real_cancellation.py
src/arw_denoise/: __init__.py  auto_tune.py  cache_storage.py  cli.py  compare_view.py  compatibility.py  config.py  denoise.py  dnglab.py  dngwrite.py  domain.py  engines.py  eta.py  gpu_probe.py  gui.py  (+16 more)
tests/: test_audit_bundle.py  test_auto_tune.py  test_cache_storage.py  test_camera_support.py  test_cli.py  test_compare_view.py  test_compatibility.py  test_denoise.py  test_dnglab.py  test_dngwrite.py  test_engines.py  test_eta.py  test_gpu_probe.py  test_gui_settings.py  test_jobs.py  test_metrics.py  test_model_manifest.py  test_naming.py  test_onnx_engine.py  test_pipeline.py  test_pmrid_assets.py  test_pmrid_export.py  test_postprocess.py  test_preview.py  test_preview_cache.py  test_preview_window.py  test_processor.py  test_release_manifest.py  test_settings.py  test_smart_processor.py  test_task_control.py  test_tile_scheduler.py  test_version.py
tools/: pmrid_net.py  pmrid_to_onnx.py
(+7 files in other folders)
