[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arw-denoise"
version = "0.3.0"
description = "Open-source Bayer RAW batch denoiser with editable DNG output"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "ARW Denoise contributors"}]
dependencies = ["numpy>=1.24", "tifffile>=2024.8", "psutil==7.2.2"]

[project.optional-dependencies]
raw = ["rawpy>=0.24"]
gui = ["PySide6==6.11.1"]
denoise = ["bm3d>=4.0"]
gpu = ["onnxruntime-gpu[cuda,cudnn]==1.23.2"]
dev = ["pytest>=8", "pytest-cov>=5"]
build = ["pyinstaller>=6.10"]
model-export = [
  "torch==2.5.1",
  "onnx==1.17.0",
  "onnxruntime==1.23.2",
  "onnxconverter-common==1.14.0",
]

[project.scripts]
arw-denoise = "arw_denoise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
